--- a/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/controller/#{PTSTN}Controller.java.vm
+++ b/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/controller/#{PTSTN}Controller.java.vm
@@ -1,4 +1,4 @@
-package com.ksptooi.biz.${ptalcn}.controller;
+package com.ksptool.bio.biz.${ptalcn}.controller;
 
 ## 引入公用包
 import com.ksptool.assembly.entity.web.CommonIdDto;
