--- a/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
+++ b/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
@@ -1,4 +1,4 @@
-package com.ksptooi.biz.${ptalcn}.model;
+package com.ksptool.bio.biz.${ptalcn}.model;
 
 import java.time.LocalDateTime;
 import com.ksptool.bio.biz.auth.service.AuthService;
