--- a/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/dto/Edit#{PTSTN}Dto.java.vm
+++ b/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/dto/Edit#{PTSTN}Dto.java.vm
@@ -1,4 +1,4 @@
-package com.ksptooi.biz.${ptalcn}.model.dto;
+package com.ksptool.bio.biz.${ptalcn}.model.dto;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
