--- a/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/controller/#{PTSTN}Controller.java.vm
+++ b/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/controller/#{PTSTN}Controller.java.vm
@@ -13,11 +13,12 @@ import org.springframework.web.bind.annotation.*;
 import jakarta.validation.Valid;
 
 ## 引入专用包
-${ptalcn}.service.${ptstn}Service;
-${ptalcn}.model.dto.Add${ptstn}Dto;
-${ptalcn}.model.dto.Edit${ptstn}Dto;
-${ptalcn}.model.dto.Get${ptstn}ListDto;
-${ptalcn}.model.vo.Get${ptstn}ListVo;${ptalcn}.model.vo.Get${ptstn}DetailsVo;
+import com.ksptool.bio.biz.${ptalcn}.service.${ptstn}Service;
+import com.ksptool.bio.biz.${ptalcn}.model.dto.Add${ptstn}Dto;
+import com.ksptool.bio.biz.${ptalcn}.model.dto.Edit${ptstn}Dto;
+import com.ksptool.bio.biz.${ptalcn}.model.dto.Get${ptstn}ListDto;
+import com.ksptool.bio.biz.${ptalcn}.model.vo.Get${ptstn}ListVo;
+import com.ksptool.bio.biz.${ptalcn}.model.vo.Get${ptstn}DetailsVo;
 
 
 @RestController
