refactor: 替换AuthService为SessionService以获取当前用户ID，增强代码一致性

--- a/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
+++ b/src/main/resources/support-static/code-generator/blueprint_jpa/src/main/java/com/ksptool/bio/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
@@ -1,7 +1,8 @@
 package com.ksptool.bio.biz.${ptalcn}.model;
 
+import com.ksptool.assembly.entity.exception.AuthException;
 import java.time.LocalDateTime;
-import com.ksptool.bio.biz.auth.service.AuthService;
+import com.ksptool.bio.biz.auth.service.SessionService;
 import com.ksptool.bio.commons.utils.IdWorker;
 import jakarta.persistence.*;
 import lombok.Getter;
@@ -78,13 +79,13 @@ public class ${ptstn}Po {
         
         #if($hasCreatorId)
         if (this.creatorId == null) {
-            this.creatorId = AuthService.getCurrentUserId();
+            this.creatorId = SessionService.session().getUserId();
         }
         #end
         
         #if($hasUpdaterId)
         if (this.updaterId == null) {
-            this.updaterId = AuthService.getCurrentUserId();
+            this.updaterId = SessionService.session().getUserId();
         }
         #end
     }
@@ -108,7 +109,7 @@ public class ${ptstn}Po {
         
         #if($hasUpdaterId)
         if (this.updaterId == null) {
-            this.updaterId = AuthService.getCurrentUserId();
+            this.updaterId = SessionService.session().getUserId();
         }
         #end
     }
